Aggiunto router Post per la gestione delle rotte dei post; Scritte funzioni delle rotte nel controller Post; Modificata app.js per l'utilizzo del router;

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Esercizio Usando l'array dei post fornito con le relative immagini, creare un file di routing (routers/posts.js) che conterrà le rotte necessario per l'entità post.",
   "main": "app.js",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
